Bug 1337641 - Temporarily disable an assert in cubeb duplex. r=achronop

MozReview-Commit-ID: GD57nZRoXFj