media/libcubeb/update.sh
@@ -69,3 +69,6 @@ fi
 
 echo "Applying a patch on top of $rev"
 patch -p3 < temp-patch-debug-drift.patch
+
+echo "Applying a patch on top of $rev"
+patch -p3 < disable-assert.patch
